tests/specs/ecosystem/namchee/telepon/1_1_1.test
namchee/telepon/1.1.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { Telepon } from "./src/telepon.ts";
         ~~~~~~~
    at file://<tmpdir>/index.ts:1:10

